--- a/styles/main.css
+++ b/styles/main.css
@@ -2,24 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    cursor: url(/cursor/main_cur.png), default;
-}
-
 .bouncy-arrow {
     color: #fff;
-    position: absolute;
+    position: flex;
     bottom: 0;
     right: 50%;
     font-size: 3.5em;
     animation: arrow-bounce 2s infinite;
     overflow: hidden;
-    cursor: url(/cursor/pointer_cur.png), pointer;
+    cursor: pointer;
 }
 
 .back-to-top .top {
     position: fixed;
-    cursor: url(/cursor/pointer_cur.png), pointer;
+    cursor: pointer;
     bottom: 15px;
     right: 15px;
     font-size: 25px;
